# PressStartAI

./: .gitignore  PRESSSTARTAI_HUMAN_MANUAL_TECHNICAL.md  PressStartAI_Volume_1_MASTER_PROMPT.docx  README.md  README_AI.md  This chat was used to create this app.md  Virtual_EnvCommnd.txt  main.py  opencv_build.txt  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.yaml  logging.yaml
docs/: ARCHITECTURE.md
src/: cli.py
tools/: benchmark_openvino.py  benchmark_visual_reasoner.py  test_facecam_background_removal.py  test_facecam_background_removal_video.py  verify_audio_analyzer.py  verify_audio_extractor.py  verify_caption_renderer.py  verify_caption_segment_builder.py  verify_final_highlight_combiner.py  verify_final_highlight_exporter.py  verify_final_highlight_selector.py  verify_full_highlight_pipeline.py  verify_funasr_hindi.py  verify_highlight_analysis_combiner.py  verify_highlight_candidates.py  verify_highlight_clip_generator.py  verify_highlight_features.py  verify_highlight_frame_extractor.py  verify_highlight_fusion_reasoner.py  verify_highlight_overlap_resolver.py  verify_highlight_pipeline.py  verify_highlight_reasoner.py  verify_highlight_scorer.py  verify_highlight_selector.py  verify_hindi_whisper.py  verify_motion_analyzer.py  verify_openvino.py  verify_pipeline_run_path_builder.py  verify_pipeline_stage_runner.py  verify_qwen_all_chunks.py  verify_qwen_asr.py  verify_qwen_asr_service.py  verify_scene_detector.py  verify_scene_transcript_mapper.py  verify_short_batch_renderer.py  verify_short_metadata_generator.py  (+12 more)
(+66 files in other folders)
